--- a/package.json
+++ b/package.json
@@ -18,10 +18,11 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "json-server": "^1.0.0-beta.1"
   },
   "scripts": {
-    "start": "concurrently \"PORT=3000 node server.js\" \"PORT=3200 json-server --watch ./db.json\"",
+    "start": "concurrently \"node server.js\" \"json-server --watch ./db.json -p $PORT_JSON_SERVER\"",
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build",
     "client": "react-scripts start"
@@ -43,8 +44,6 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "json-server": "^1.0.0-beta.1"
   }
 }
+
