--- a/package.json
+++ b/package.json
@@ -18,11 +18,10 @@
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1",
     "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4",
-    "json-server": "^1.0.0-beta.1"
+    "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "concurrently \"node server.js\" \"json-server --watch ./db.json -p $PORT_JSON_SERVER\"",
+    "start": "concurrently \"node server.js\" \"json-server --watch ./db.json -p ${PORT_JSON_SERVER:-3200}\"",
     "build": "react-scripts build",
     "heroku-postbuild": "npm run build",
     "client": "react-scripts start"
@@ -44,6 +43,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "json-server": "^1.0.0-beta.1"
   }
 }
 
